Expand tests and repository

--- a/customer-domain/pom.xml
+++ b/customer-domain/pom.xml
@@ -45,7 +45,11 @@
                         <configuration>
                             <includes>
                                 <include>be/tvw/customer/api/**/*</include>
+                                <include>be/tvw/customer/fakes/**/*</include>
                             </includes>
+                            <excludes>
+                                <exclude>be/tvw/customer/fakes/**/*Test.class</exclude>
+                            </excludes>
                         </configuration>
                     </execution>
                 </executions>
